plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.5.16'
  id 'com.github.ben-manes.versions' version '0.54.0'
  id 'org.owasp.dependencycheck' version '12.1.3'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'java'
  id 'jvm-test-suite'
}

group = 'uk.gov.hmcts.reform'
version = '1.0.2'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
}

tasks.withType(Copy).configureEach {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

// https://github.com/gradle/gradle/issues/16791
tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

test {
  failFast = true
}

tasks.register('functional', Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
}

tasks.register('integration', Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

tasks.register('smoke', Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

tasks.register('tests') {
  description = "Runs junit , integration and functional tests"
  dependsOn test, integration, functional
}

tasks.register('fortifyScan', JavaExec)  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.9.0'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = "7.26.0"
  sourceSets = [sourceSets.main]
  reportsDir = layout.buildDirectory.dir("reports/pmd").get().asFile
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

jacocoTestCoverageVerification {
  violationRules {
    rule {
      excludes = ["com.gargoylesoftware.htmlunit.javascript.host.css.StyleAttributes"]
    }
  }
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
  }
}

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: wa-standalone-task-bpmn"
    property "sonar.projectKey", "uk.gov.hmcts.reform:wa-standalone-task-bpmn"
    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation.asFile.get().path}"
    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wastandalonetaskbpmn/config/**," +
      "src/main/java/uk/gov/hmcts/reform/wastandalonetaskbpmn/Application.java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'

  //CVE Scanning only relevant to production code that is published, not test or other implementations
  scanConfigurations += 'releaseCompileClasspath'

  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
}

dependencyManagement {
  dependencies {
    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'

    // CVE-2018-10237 - Unbounded memory allocation
    dependencySet(group: 'com.google.guava', version: '33.6.0-jre') {
      entry 'guava'
    }

    //CVE-2021-28170
    dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.2'

    dependencySet( group: 'org.springframework.security', version: '7.1.0'){
      entry 'spring-boot-starter-security'
      entry 'spring-security-core'
      entry 'spring-security-acl'
      entry 'spring-security-aspects'
      entry 'spring-security-cas'
      entry 'spring-security-config'
      entry 'spring-security-crypto'
      entry 'spring-security-data'
      entry 'spring-security-ldap'
      entry 'spring-security-messaging'
      entry 'spring-security-oauth2-client'
      entry 'spring-security-oauth2-core'
      entry 'spring-security-oauth2-jose'
      entry 'spring-security-oauth2-resource-server'
      entry 'spring-security-openid'
      entry 'spring-security-remoting'
      entry 'spring-security-rsocket'
      entry 'spring-security-saml2-service-provider'
      entry 'spring-security-taglibs'
      entry 'spring-security-test'
      entry 'spring-security-web'
    }

  }
}

repositories {
  mavenLocal()
  maven {
    name = "AzureArtifacts"
    url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
  }
  mavenCentral()
}

def versions = [
  junit           : '5.12.2',
  junitPlatform   : '1.12.2',
  reformLogging   : '8.0.0',
  springBoot      : '3.5.16',
  springDoc       : '2.8.17',
  camunda         : '7.24.0'

]

ext['snakeyaml.version'] = '2.0'
ext['tomcat.version'] = '10.1.33'

dependencies {
  implementation "org.springframework.boot:spring-boot-gradle-plugin:${versions.springBoot}"

  implementation "org.springframework.boot:spring-boot-starter-web:${versions.springBoot}"
  implementation "org.springframework.boot:spring-boot-starter-actuator:${versions.springBoot}"
  implementation "org.springframework.boot:spring-boot-starter-aop:${versions.springBoot}"
  implementation "org.springframework.boot:spring-boot-starter-json:${versions.springBoot}"
  implementation 'com.google.guava:guava:33.6.0-jre'

  implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.0'

  implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${versions.springDoc}"

  implementation 'org.apache.commons:commons-compress:1.28.0'

  implementation "com.github.hmcts.java-logging:logging:${versions.reformLogging}"
  implementation 'com.microsoft.azure:applicationinsights-web:3.7.9'

  implementation 'org.apache.logging.log4j:log4j-api:2.26.1'
  implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.26.1'

  implementation "org.camunda.bpm:camunda-external-task-client:${versions.camunda}"

  testImplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit}"
  testImplementation "org.junit.jupiter:junit-jupiter-params:${versions.junit}"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${versions.junit}"
  testImplementation "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
  testImplementation "org.junit.platform:junit-platform-commons:${versions.junitPlatform}"

  testImplementation "org.springframework.boot:spring-boot-starter-test:${versions.springBoot}"

  testImplementation "org.camunda.bpm.dmn:camunda-engine-dmn:${versions.camunda}"
  testImplementation 'org.camunda.bpm.assert:camunda-bpm-assert:15.0.0'
  testImplementation "org.camunda.bpm:camunda-engine:${versions.camunda}"
  testImplementation 'org.camunda.bpm.extension:camunda-bpm-junit5:1.1.0'

  testImplementation 'com.h2database:h2:2.4.240'
  testImplementation 'com.github.hmcts:fortify-client:1.4.10:all'
  integrationTestImplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit}"

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath

  smokeTestImplementation sourceSets.main.runtimeClasspath

}

application {
  mainClass = 'uk.gov.hmcts.reform.wastandalonetaskbpmn.Application'
}

bootJar {
  getArchiveFileName().set(provider {
    'wa-standalone-task-bpmn.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}
